--- a/gallery-timeline.html
+++ b/gallery-timeline.html
@@ -83,7 +83,7 @@
                    <div class="col-12 col-md-10 col-lg-9 pr-md-0">                       
                        <nav class="navbar navbar-expand-md btco-hover-menu py-lg-2">
          
-                            <a class="navbar-brand pl-0" href="index.html"><img src="../fables-master/assets/custom/images/AR-logo.jpg" alt="" style="height: 50px; border-radius: 50%;"></a>
+                            <a class="navbar-brand pl-0" href="projects.html"><img src="../fables-master/assets/custom/images/AR-logo.jpg" alt="" style="height: 50px; border-radius: 50%;"></a>
                             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#fablesNavDropdown" aria-controls="fablesNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
                                 <span class="fables-iconmenu-icon text-white font-16"></span>
                             </button>
@@ -91,7 +91,7 @@
 
                                 <ul class="navbar-nav mx-auto fables-nav">   
                                     <li class="nav-item dropdown">
-                                        <a class="nav-link" href="home4.html" id="sub-nav1" aria-haspopup="true" aria-expanded="false">
+                                        <a class="nav-link" href="index.html" id="sub-nav1" aria-haspopup="true" aria-expanded="false">
                                             Home
                                         </a>
                                     </li>
@@ -133,7 +133,7 @@
     <div class="container"> 
         <nav aria-label="breadcrumb">
           <ol class="fables-breadcrumb breadcrumb px-0 py-3">
-            <li class="breadcrumb-item"><a href="./home4.html" class="fables-second-text-color">Home</a></li> 
+            <li class="breadcrumb-item"><a href="index.html" class="fables-second-text-color">Home</a></li> 
             <li class="breadcrumb-item active" aria-current="page">Gallery Timeline </li>
           </ol>
         </nav> 
