--- a/testimonials.html
+++ b/testimonials.html
@@ -102,7 +102,7 @@
                    <div class="col-12 col-md-10 col-lg-9 pr-md-0">                       
                        <nav class="navbar navbar-expand-md btco-hover-menu py-lg-2">
          
-                            <a class="navbar-brand pl-0" href="index.html"><img src="../fables-master/assets/custom/images/AR-logo.jpg" alt="" style="height: 50px; border-radius: 50%;"></a>
+                            <a class="navbar-brand pl-0" href="projects.html"><img src="../fables-master/assets/custom/images/AR-logo.jpg" alt="" style="height: 50px; border-radius: 50%;"></a>
                             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#fablesNavDropdown" aria-controls="fablesNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
                                 <span class="fables-iconmenu-icon text-white font-16"></span>
                             </button>
@@ -110,7 +110,7 @@
 
                                 <ul class="navbar-nav mx-auto fables-nav">   
                                     <li class="nav-item dropdown">
-                                        <a class="nav-link" href="home4.html" id="sub-nav1" aria-haspopup="true" aria-expanded="false">
+                                        <a class="nav-link" href="index.html" id="sub-nav1" aria-haspopup="true" aria-expanded="false">
                                             Home
                                         </a>
                                     </li>
@@ -148,7 +148,7 @@
         <div class="owl-carousel owl-theme" id="fables-testimonial-carousel">
               <div class="row text-center fables-testimonial-carousel-item rounded py-4"> 
                    <div class="col-12 col-md-3">
-                      <img src="assets/custom/images/testimonial-img.png" alt="Fables Template" class="fables-testimonial-carousel-img">  
+                      <img src="assets/custom/images/testimonial.img.jpg" alt="Fables Template" class="fables-testimonial-carousel-img">  
                       <h3 class="font-14 semi-font text-white">Billy Richards</h3>
                       <h3 class="font-14 font-italic text-white mt-2">Chief Manager, Simba Co</h3>
                    </div>
