--- a/about1.html
+++ b/about1.html
@@ -88,7 +88,7 @@
                    <div class="col-12 col-md-10 col-lg-9 pr-md-0">                       
                        <nav class="navbar navbar-expand-md btco-hover-menu py-lg-2">
          
-                            <a class="navbar-brand pl-0" href="projects.html"><img src="../fables-master/assets/custom/images/AR-logo.jpg" alt="" style="height: 50px; border-radius: 50%;"></a>
+                            <a class="navbar-brand pl-0" href="projects.html"><img src="./assets/custom/images/AR-logo.jpg" alt="" style="height: 50px; border-radius: 50%;"></a>
                             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#fablesNavDropdown" aria-controls="fablesNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
                                 <span class="fables-iconmenu-icon text-white font-16"></span>
                             </button>
@@ -632,14 +632,14 @@
             <div class="row">
                 <div class="col-6 col-md-3 mb-4 mb-lg-0 wow fadeInDown" data-wow-delay=".3s">
                     <div class="card fables-team-block fables-team-data-hover fables-second-border-color">
-                      <img class="img-fluid" src="assets/custom/images/testimonial-img.png" alt="Card image cap">
+                      <img class="img-fluid" src="./assets/custom/images/testimonial-img.png" alt="Card image cap">
                       <div class="card-body">
-                        <h5 class="team-name white-color white-color-hover">Mohamed Ashikeen</h5>
+                        <h5 class="team-name white-color white-color-hover">Ashikeen</h5>
                         <p class="fables-team-pos mt-2 mb-3 italic">Engineer</p> 
                         <ul class="nav fables-team-social-links"> 
                             <li><a href="#" target="_blank"><span class="fables-iconlinkedin-icon fables-second-text-color fables-fifth-border-color fables-team-social-icon"></span></a></li>   
                             <li><a href="#" target="_blank"><span class="fables-icontwitter-icon fables-second-text-color fables-fifth-border-color fables-team-social-icon"></span></a></li>
-                            <li><a href="#" target="_blank"><span class="fables-iconinstagram-icon fables-second-text-color fables-fifth-border-color fables-team-social-icon"></span></a></li> 
+                            <li><a href="https://www.instagram.com/arrahmanconstruction/" target="_blank"><span class="fables-iconinstagram-icon fables-second-text-color fables-fifth-border-color fables-team-social-icon"></span></a></li> 
                             <li><a href="#" target="_blank"><span class="fables-iconwhatapp-icon fables-second-text-color fables-fifth-border-color fables-team-social-icon"></span></a></li> 
                         </ul>
                       </div>
@@ -647,7 +647,7 @@
                 </div>
                 <div class="col-6 col-md-3 mb-4 mb-lg-0 wow fadeInDown" data-wow-delay=".3s">
                     <div class="card fables-team-block fables-team-data-hover fables-second-border-color">
-                      <img class="img-fluid" src="assets/custom/images/misfer.img.jpg" alt="Card image cap">
+                      <img class="img-fluid" src="./assets/custom/images/misfer.img.jpg" alt="Card image cap">
                       <div class="card-body">
                         <h5 class="team-name white-color white-color-hover">Misfer</a></h5>
                         <p class="fables-team-pos mt-2 mb-3 italic">Asisstant</p> 
@@ -695,31 +695,31 @@
         </div>       
         <div class="owl-carousel owl-theme fables-carousel-border mt-0 mb-4 my-md-5 carousel-items-6 dots-0">
               <div> 
-                  <img src="../fables-master/assets/custom/images/AR-logo.jpg" alt="AR logo" class="fables-partner-carousel-img fables-third-border-color">  
+                  <img src="./assets/custom/images/AR-logo.jpg" alt="AR logo" class="fables-partner-carousel-img fables-third-border-color">  
               </div>
               <div> 
-                  <img src="../fables-master/assets/custom/images/AR-logo.jpg" alt="AR logo" class="fables-partner-carousel-img fables-third-border-color">  
+                  <img src="./assets/custom/images/AR-logo.jpg" alt="AR logo" class="fables-partner-carousel-img fables-third-border-color">  
               </div>
               <div> 
-                  <img src="../fables-master/assets/custom/images/AR-logo.jpg" alt="AR logo" class="fables-partner-carousel-img fables-third-border-color">  
+                  <img src="./assets/custom/images/AR-logo.jpg" alt="AR logo" class="fables-partner-carousel-img fables-third-border-color">  
               </div>
               <div> 
-                  <img src="../fables-master/assets/custom/images/AR-logo.jpg" alt="AR logo" class="fables-partner-carousel-img fables-third-border-color">  
+                  <img src="./assets/custom/images/AR-logo.jpg" alt="AR logo" class="fables-partner-carousel-img fables-third-border-color">  
               </div>
               <div> 
-                  <img src="../fables-master/assets/custom/images/AR-logo.jpg" alt="AR logo" class="fables-partner-carousel-img fables-third-border-color">  
+                  <img src="./assets/custom/images/AR-logo.jpg" alt="AR logo" class="fables-partner-carousel-img fables-third-border-color">  
               </div>
               <div> 
-                  <img src="../fables-master/assets/custom/images/AR-logo.jpg" alt="AR logo" class="fables-partner-carousel-img fables-third-border-color">  
+                  <img src="./assets/custom/images/AR-logo.jpg" alt="AR logo" class="fables-partner-carousel-img fables-third-border-color">  
               </div>
               <div> 
-                  <img src="../fables-master/assets/custom/images/AR-logo.jpg" alt="AR logo" class="fables-partner-carousel-img fables-third-border-color">  
+                  <img src="./assets/custom/images/AR-logo.jpg" alt="AR logo" class="fables-partner-carousel-img fables-third-border-color">  
               </div>
               <div> 
-                  <img src="../fables-master/assets/custom/images/AR-logo.jpg" alt="AR logo" class="fables-partner-carousel-img fables-third-border-color">  
+                  <img src="./assets/custom/images/AR-logo.jpg" alt="AR logo" class="fables-partner-carousel-img fables-third-border-color">  
               </div>
               <div> 
-                  <img src="../fables-master/assets/custom/images/AR-logo.jpg" alt="AR logo" class="fables-partner-carousel-img fables-third-border-color">  
+                  <img src="./assets/custom/images/AR-logo.jpg" alt="AR logo" class="fables-partner-carousel-img fables-third-border-color">  
               </div>
 
             </div> 
@@ -729,7 +729,7 @@
     <div class="container">
         <div class="row">
             <div class="col-12 col-lg-4 mb-4 mb-lg-0">
-                <img src="assets/custom/images/AR-logo.jpg" alt="fables template" style="height: 50px; border-radius: 50%;">AR-RAHMAN CONSTRUCTION
+                <img src="./assets/custom/images/AR-logo.jpg" alt="fables template" style="height: 50px; border-radius: 50%;">AR-RAHMAN CONSTRUCTION
                 <p class="font-15 fables-third-text-color" style="margin-top: 10px;">
                     t is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters. 
                     <br><br>
@@ -756,7 +756,7 @@
             <div class="col-12 col-sm-6 col-lg-4">
                 <h2 class="font-20 semi-font fables-second-border-color border-bottom pb-3 mb-3">EXPLORE OUR SITE</h2>
                 <ul class="nav fables-footer-links">
-                    <li><a href="home4.html">Home</a></li>
+                    <li><a href="index.html">Home</a></li>
                     <li><a href="about1.html">About Us</a></li>
                     <li><a href="contactus3.html">Contact Us</a></li>
                     <li><a href="gallery-timeline.html">Gallery</a></li>
