--- a/contactus3.html
+++ b/contactus3.html
@@ -85,7 +85,7 @@
                    <div class="col-12 col-md-10 col-lg-9 pr-md-0">                       
                        <nav class="navbar navbar-expand-md btco-hover-menu py-lg-2">
          
-                            <a class="navbar-brand pl-0" href="projects.html"><img src="./assets/custom/images/AR-logo.jpg" alt="" style="height: 50px; border-radius: 50%;"></a>
+                            <a class="navbar-brand pl-0" href="projects.html"><img src="./assets/custom/images/AR-logo.jpg" alt="AR logo" style="height: 50px; border-radius: 50%;"></a>
                             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#fablesNavDropdown" aria-controls="fablesNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
                                 <span class="fables-iconmenu-icon text-white font-16"></span>
                             </button>
@@ -200,7 +200,7 @@
                     
                     <input type="text" name="_honey" style="display: none;">
                     <input type="hidden" name="_captcha" value="false">
-                    <!-- <input type="hidden" name="_name" value=""> -->
+                    <input type="hidden" name="_name" value="https://a-faisal-7.github.io/Aaa.Na/contactus3">
 
                   <div class="form-row">
                       <div class="form-group col-md-6">
@@ -263,7 +263,7 @@
             <div class="col-12 col-sm-6 col-lg-4">
                 <h2 class="font-20 semi-font fables-second-border-color border-bottom pb-3 mb-3">EXPLORE OUR SITE</h2>
                 <ul class="nav fables-footer-links">
-                    <li><a href="home4.html">Home</a></li>
+                    <li><a href="index.html">Home</a></li>
                     <li><a href="about1.html">About Us</a></li>
                     <li><a href="contactus3.html">Contact Us</a></li>
                     <li><a href="gallery-timeline.html">Gallery</a></li>
