--- a/image-hover-effects.html
+++ b/image-hover-effects.html
@@ -86,7 +86,7 @@
                    <div class="col-12 col-md-10 col-lg-9 pr-md-0">                       
                        <nav class="navbar navbar-expand-md btco-hover-menu py-lg-2">
          
-                            <a class="navbar-brand pl-0" href="projects.html"><img src="../fables-master/assets/custom/images/AR-logo.jpg" alt="" style="height: 50px; border-radius: 50%;"></a>
+                            <a class="navbar-brand pl-0" href="projects.html"><img src="./assets/custom/images/AR-logo.jpg" alt="" style="height: 50px; border-radius: 50%;"></a>
                             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#fablesNavDropdown" aria-controls="fablesNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
                                 <span class="fables-iconmenu-icon text-white font-16"></span>
                             </button>
@@ -132,7 +132,7 @@
         <div class="row">
             <div class="col-12 col-sm-6 col-md-4 mb-4 mb-lg-5"> 
               <div class="image-container translate-effect-right">
-                  <a href="#"><img src="assets/custom/images/cat-larg1.jpg" alt="alt image text"></a> 
+                  <a href="#"><img src="./assets/custom/images/cat-larg1.jpg" alt="alt image text"></a> 
               </div>
               <h2 class="mt-3 mb-2 font-18 semi-font">Getting to Another Level of Design</h2>
               <div class="fables-forth-text-color font-14 mb-2">                                  
@@ -354,10 +354,10 @@
             <div class="col-12 col-sm-6 col-lg-4">
                 <h2 class="font-20 semi-font fables-second-border-color border-bottom pb-3 mb-3">EXPLORE OUR SITE</h2>
                 <ul class="nav fables-footer-links">
-                    <li><a href="home4.html">Home</a></li>
+                    <li><a href="index.html">Home</a></li>
                     <li><a href="about1.html">About Us</a></li>
-                    <li><a href="contactus1.html">Contact Us</a></li>
-                    <li><a href="gallery.html">Gallery</a></li>
+                    <li><a href="contactus3.html">Contact Us</a></li>
+                    <li><a href="gallery-timeline.html">Gallery</a></li>
                     <li><a href="team.html">Team</a></li>
                     <li><a href="testimonials.html">Testimonials</a></li>
                 </ul>
