--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                    <div class="col-12 col-md-10 col-lg-9 pr-md-0">                       
                        <nav class="navbar navbar-expand-md btco-hover-menu py-lg-2">
          
-                          <a class="navbar-brand pl-0" href="projects.html"><img src="../fables-master/assets/custom/images/AR-logo.jpg" alt="" style="width: 50px; height: 50px; border-radius: 50%;"></a>
+                          <a class="navbar-brand pl-0" href="projects.html"><img src="./assets/custom/images/AR-logo.jpg" alt="AR logo" style="width: 50px; height: 50px; border-radius: 50%;"></a>
                           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#fablesNavDropdown" aria-controls="fablesNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
                             <span class="fables-iconmenu-icon text-white font-16"></span>
                           </button>
@@ -227,7 +227,7 @@
                           <span class="fables-iconbussiness2 fables-second-text-color fa-3x"></span>
                           <h2 class="fables-main-text-color font-18 my-2">Top Quality Construction</h2>
                           <p class="fables-forth-text-color font-weight-light">
-                              #
+                            A building is more than the sum of its parts. It's the environment in which we live, work, worship, and connect.
                           </p>
                       </div>
                       <div class="col-12 col-sm-6 my-4 text-center text-md-left wow fadeInRight">
@@ -407,31 +407,31 @@
            <div class="container">
                <div class="owl-carousel owl-theme nav-0 carousel-items-6 dots-0">
                   <div> 
-                      <img src="../fables-master/assets/custom/images/AR-logo.jpg" alt="AR logo" class="border-hover fables-partner-carousel-img">  
+                      <img src="./assets/custom/images/AR-logo.jpg" alt="AR logo" class="border-hover fables-partner-carousel-img"  style="border-radius: 50%;">  
                   </div>
                   <div> 
-                      <img src="../fables-master/assets/custom/images/AR-logo.jpg" alt="AR logo" class="border-hover fables-partner-carousel-img">  
+                      <img src="./assets/custom/images/AR-logo.jpg" alt="AR logo" class="border-hover fables-partner-carousel-img"  style="border-radius: 50%;">  
                   </div>
                   <div> 
-                      <img src="../fables-master/assets/custom/images/AR-logo.jpg" alt="AR logo" class="border-hover fables-partner-carousel-img">  
+                      <img src="./assets/custom/images/AR-logo.jpg" alt="AR logo" class="border-hover fables-partner-carousel-img"  style="border-radius: 50%;">  
                   </div>
                   <div> 
-                      <img src="../fables-master/assets/custom/images/AR-logo.jpg" alt="AR logo" class="border-hover fables-partner-carousel-img">  
+                      <img src="./assets/custom/images/AR-logo.jpg" alt="AR logo" class="border-hover fables-partner-carousel-img"  style="border-radius: 50%;">  
                   </div>
                   <div> 
-                      <img src="../fables-master/assets/custom/images/AR-logo.jpg" alt="AR logo" class="border-hover fables-partner-carousel-img">  
+                      <img src="./assets/custom/images/AR-logo.jpg" alt="AR logo" class="border-hover fables-partner-carousel-img"  style="border-radius: 50%;">  
                   </div>
                   <div> 
-                      <img src="../fables-master/assets/custom/images/AR-logo.jpg" alt="AR logo" class="border-hover fables-partner-carousel-img">  
+                      <img src="./assets/custom/images/AR-logo.jpg" alt="AR logo" class="border-hover fables-partner-carousel-img"  style="border-radius: 50%;">  
                   </div>
                   <div> 
-                      <img src="../fables-master/assets/custom/images/AR-logo.jpg" alt="AR logo" class="border-hover fables-partner-carousel-img">  
+                      <img src="./assets/custom/images/AR-logo.jpg" alt="AR logo" class="border-hover fables-partner-carousel-img"  style="border-radius: 50%;">  
                   </div>
                   <div> 
-                      <img src="../fables-master/assets/custom/images/AR-logo.jpg" alt="AR logo" class="border-hover fables-partner-carousel-img">  
+                      <img src="./assets/custom/images/AR-logo.jpg" alt="AR logo" class="border-hover fables-partner-carousel-img"  style="border-radius: 50%;">  
                   </div>
                   <div> 
-                      <img src="../fables-master/assets/custom/images/AR-logo.jpg" alt="AR logo" class="fborder-hover ables-partner-carousel-img">  
+                      <img src="./assets/custom/images/AR-logo.jpg" alt="AR logo" class="fborder-hover ables-partner-carousel-img"  style="border-radius: 50%;">  
                   </div>
 
                 </div>  
@@ -446,7 +446,7 @@
     <div class="container">
         <div class="row">
             <div class="col-12 col-lg-4 mb-4 mb-lg-0">
-                <img src="assets/custom/images/AR-logo.jpg" alt="AR logo" style="height: 50px; border-radius: 50%;">AR-RAHMAN CONSTRUCTION
+                <img src="./assets/custom/images/AR-logo.jpg" alt="AR logo" style="height: 50px; border-radius: 50%;">AR-RAHMAN CONSTRUCTION
                 <p class="font-15 fables-third-text-color" style="margin-top: 10px;"> 
                     t is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters. 
                     <br><br>
@@ -473,7 +473,7 @@
             <div class="col-12 col-sm-6 col-lg-4">
                 <h2 class="font-20 semi-font fables-second-border-color border-bottom pb-3 mb-3">EXPLORE OUR SITE</h2>
                 <ul class="nav fables-footer-links">
-                    <li><a href="home4.html">Home</a></li>
+                    <li><a href="index.html">Home</a></li>
                     <li><a href="about1.html">About Us</a></li>
                     <li><a href="contactus3.html">Contact Us</a></li>
                     <li><a href="gallery-timeline.html">Gallery</a></li>
