--- a/testimonials.html
+++ b/testimonials.html
@@ -102,7 +102,7 @@
                    <div class="col-12 col-md-10 col-lg-9 pr-md-0">                       
                        <nav class="navbar navbar-expand-md btco-hover-menu py-lg-2">
          
-                            <a class="navbar-brand pl-0" href="projects.html"><img src="../fables-master/assets/custom/images/AR-logo.jpg" alt="" style="height: 50px; border-radius: 50%;"></a>
+                            <a class="navbar-brand pl-0" href="projects.html"><img src="./assets/custom/images/AR-logo.jpg" alt="" style="height: 50px; border-radius: 50%;"></a>
                             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#fablesNavDropdown" aria-controls="fablesNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
                                 <span class="fables-iconmenu-icon text-white font-16"></span>
                             </button>
@@ -149,8 +149,8 @@
               <div class="row text-center fables-testimonial-carousel-item rounded py-4"> 
                    <div class="col-12 col-md-3">
                       <img src="assets/custom/images/testimonial.img.jpg" alt="Fables Template" class="fables-testimonial-carousel-img">  
-                      <h3 class="font-14 semi-font text-white">Billy Richards</h3>
-                      <h3 class="font-14 font-italic text-white mt-2">Chief Manager, Simba Co</h3>
+                      <h3 class="font-14 semi-font text-white">Mohamed Ashikeen</h3>
+                      <h3 class="font-14 font-italic text-white mt-2">Engineer</h3>
                    </div>
                    <div class="col-12 col-md-9 p-0 p-md-2">
                         <div class="fables-testimonial-detail font-15 font-italic text-white p-4 position-relative"> 
@@ -163,8 +163,8 @@
               <div class="row text-center fables-testimonial-carousel-item rounded py-4"> 
                    <div class="col-12 col-md-3">
                       <img src="assets/custom/images/testimonial.img.jpg" alt="Fables Template" class="fables-testimonial-carousel-img">  
-                      <h3 class="font-14 semi-font text-white">Billy Richards</h3>
-                      <h3 class="font-14 font-italic text-white mt-2">Chief Manager, Simba Co</h3>
+                      <h3 class="font-14 semi-font text-white">Mohamed Ashikeen</h3>
+                      <h3 class="font-14 font-italic text-white mt-2">Engineer</h3>
                    </div>
                    <div class="col-12 col-md-9 p-0 p-md-2">
                         <div class="fables-testimonial-detail font-15 font-italic text-white p-4 position-relative"> 
@@ -376,7 +376,7 @@
     <div class="container">
         <div class="row">
             <div class="col-12 col-lg-4 mb-4 mb-lg-0">
-                <img src="assets/custom/images/AR-logo.jpg" alt="AR logo" style="height: 50px; border-radius: 50%;">AR_RAHMAN CONSTRUCTION
+                <img src="./assets/custom/images/AR-logo.jpg" alt="AR logo" style="height: 50px; border-radius: 50%;">AR_RAHMAN CONSTRUCTION
                 <p class="font-15 fables-third-text-color" style="margin-top: 10px;">
                     t is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters. 
                     <br><br>
@@ -403,12 +403,12 @@
             <div class="col-12 col-sm-6 col-lg-4">
                 <h2 class="font-20 semi-font fables-second-border-color border-bottom pb-3 mb-3">EXPLORE OUR SITE</h2>
                 <ul class="nav fables-footer-links">
-                    <li><a href="./home4.html">Home</a></li>
-                    <li><a href="about1.html">About Us</a></li>
-                    <li><a href="contactus1.html">Contact Us</a></li>
-                    <li><a href="gallery.html">Gallery</a></li>
-                    <li><a href="team.html">Team</a></li>
-                    <li><a href="testimonials.html">Testimonials</a></li>
+                    <li><a href="./index.html">Home</a></li>
+                    <li><a href="./about1.html">About Us</a></li>
+                    <li><a href="./contactus3.html">Contact Us</a></li>
+                    <li><a href="./gallery-timeline.html">Gallery</a></li>
+                    <li><a href="./team.html">Team</a></li>
+                    <li><a href="./testimonials.html">Testimonials</a></li>
                 </ul>
             </div>
                       
