--- a/gallery-timeline.html
+++ b/gallery-timeline.html
@@ -83,7 +83,7 @@
                    <div class="col-12 col-md-10 col-lg-9 pr-md-0">                       
                        <nav class="navbar navbar-expand-md btco-hover-menu py-lg-2">
          
-                            <a class="navbar-brand pl-0" href="projects.html"><img src="../fables-master/assets/custom/images/AR-logo.jpg" alt="" style="height: 50px; border-radius: 50%;"></a>
+                            <a class="navbar-brand pl-0" href="projects.html"><img src="./assets/custom/images/AR-logo.jpg" alt="" style="height: 50px; border-radius: 50%;"></a>
                             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#fablesNavDropdown" aria-controls="fablesNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
                                 <span class="fables-iconmenu-icon text-white font-16"></span>
                             </button>
@@ -272,7 +272,7 @@
     <div class="container">
         <div class="row">
             <div class="col-12 col-lg-4 mb-4 mb-lg-0">
-                <img src="assets/custom/images/AR-logo.jpg" alt="AR logo" style="height: 50px; border-radius: 50%;">AR-RAHMAN CONSTRUCTION
+                <img src="./assets/custom/images/AR-logo.jpg" alt="AR logo" style="height: 50px; border-radius: 50%;">AR-RAHMAN CONSTRUCTION
                 <p class="font-15 fables-third-text-color">
                     t is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters. 
                     <br><br>
@@ -299,7 +299,7 @@
             <div class="col-12 col-sm-6 col-lg-4">
                 <h2 class="font-20 semi-font fables-second-border-color border-bottom pb-3 mb-3">EXPLORE OUR SITE</h2>
                 <ul class="nav fables-footer-links">
-                    <li><a href="home4.html">Home</a></li>
+                    <li><a href="index.html">Home</a></li>
                     <li><a href="about1.html">About Us</a></li>
                     <li><a href="contactus3.html">Contact Us</a></li>
                     <li><a href="gallery-timeline.html">Gallery</a></li>
