--- a/team.html
+++ b/team.html
@@ -86,7 +86,7 @@
                    <div class="col-12 col-md-10 col-lg-9 pr-md-0">                       
                        <nav class="navbar navbar-expand-md btco-hover-menu py-lg-2">
          
-                            <a class="navbar-brand pl-0" href="projects.html"><img src="../fables-master/assets/custom/images/AR-logo.jpg" alt="" style="height: 50px; border-radius: 50%;"></a>
+                            <a class="navbar-brand pl-0" href="projects.html"><img src="./assets/custom/images/AR-logo.jpg" alt="" style="height: 50px; border-radius: 50%;"></a>
                             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#fablesNavDropdown" aria-controls="fablesNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
                                 <span class="fables-iconmenu-icon text-white font-16"></span>
                             </button>
@@ -131,7 +131,7 @@
        <div class="row">
             <div class="col-6 col-md-3 mb-4 mb-lg-5">
                 <div class="card fables-team-block fables-team-data-hover fables-second-border-color mb-4 mb-sm-0">
-                  <img class="w-100" src="assets/custom/images/team1-1.jpg" alt="Card image cap">
+                  <img class="w-100" src="./assets/custom/images/team1-1.jpg" alt="Card image cap">
                   <div class="card-body">
                     <h5><a href="#" class="fables-team-name fables-second-hover-color team-name">JOHN MARTIN</a></h5>
                     <p class="fables-team-pos mt-2 mb-3 italic">#</p> 
@@ -335,7 +335,7 @@
     <div class="container">
         <div class="row">
             <div class="col-12 col-lg-4 mb-4 mb-lg-0">
-                <a href="#" class="fables-second-border-color border-bottom pb-3 d-block mb-3 mt-minus-13"><img src="assets/custom/images/fables-logo.png" alt="fables template"></a>
+                <a href="#" class="fables-second-border-color border-bottom pb-3 d-block mb-3 mt-minus-13"><img src="./assets/custom/images/AR-logo.jpg" alt="AR logo"></a>
                 <p class="font-15 fables-third-text-color">
                     t is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters. 
                     <br><br>
@@ -362,12 +362,12 @@
             <div class="col-12 col-sm-6 col-lg-4">
                 <h2 class="font-20 semi-font fables-second-border-color border-bottom pb-3 mb-3">EXPLORE OUR SITE</h2>
                 <ul class="nav fables-footer-links">
-                    <li><a href="home4.html"></a></li>
-                    <li><a href="about1.html">About Us</a></li>
-                    <li><a href="contactus1.html">Contact Us</a></li>
-                    <li><a href="gallery.html">Gallery</a></li>
-                    <li><a href="team.html">Team</a></li>
-                    <li><a href="testimonials.html">Testimonials</a></li>
+                    <li><a href="./index.html"></a>Home</li>
+                    <li><a href="./about1.html">About Us</a></li>
+                    <li><a href="./contactus3.html">Contact Us</a></li>
+                    <li><a href="./gallery-timeline.html">Gallery</a></li>
+                    <li><a href="./team.html">Team</a></li>
+                    <li><a href="./testimonials.html">Testimonials</a></li>
                 </ul>
             </div>
                       
